--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.2",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "@tabler/icons-react": "^3.7.0",
+    "framer-motion": "^11.2.11",
     "isbot": "^4.1.0",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-themes": "^1.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
