--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@tabler/icons-react": "^3.7.0",
+    "embla-carousel-autoplay": "^8.1.5",
+    "embla-carousel-fade": "^8.1.5",
+    "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.2.11",
     "isbot": "^4.1.0",
     "next-themes": "^0.3.0",
