--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-themes": "^1.3.1"
+    "remix-themes": "^1.3.1",
+    "remix-utils": "^7.6.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
