--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@tabler/icons-react": "^3.7.0",
+    "crypto-js": "^4.2.0",
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-fade": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
@@ -24,6 +25,8 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-auth": "^3.7.0",
+    "remix-auth-form": "^1.5.0",
     "remix-themes": "^1.3.1",
     "remix-utils": "^7.6.0"
   },
