--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@tabler/icons-react": "^3.7.0",
+    "argon2": "^0.40.3",
     "crypto-js": "^4.2.0",
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-fade": "^8.1.5",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
