--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.5",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
     "remix-themes": "^1.3.1",
