--- a/package.json
+++ b/package.json
@@ -11,50 +11,56 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.2",
-    "@prisma/client": "^5.16.1",
-    "@remix-run/node": "^2.9.2",
-    "@remix-run/react": "^2.9.2",
-    "@remix-run/serve": "^2.9.2",
-    "@tabler/icons-react": "^3.7.0",
-    "argon2": "^0.40.3",
+    "@blocknote/core": "^0.17.1",
+    "@blocknote/mantine": "^0.17.1",
+    "@blocknote/react": "^0.17.1",
+    "@blocknote/server-util": "^0.17.1",
+    "@nextui-org/react": "^2.4.8",
+    "@prisma/client": "^5.21.1",
+    "@remix-run/node": "2.13.1",
+    "@remix-run/react": "2.13.1",
+    "@remix-run/serve": "2.13.1",
+    "@tabler/icons-react": "^3.19.0",
+    "argon2": "^0.41.1",
     "crypto-js": "^4.2.0",
-    "embla-carousel-autoplay": "^8.1.5",
-    "embla-carousel-fade": "^8.1.5",
-    "embla-carousel-react": "^8.1.5",
-    "framer-motion": "^11.2.11",
-    "isbot": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-fade": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.9",
+    "interweave": "^13.1.0",
+    "isbot": "^5.1.17",
     "next-themes": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-toastify": "^10.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.6",
     "remix-auth": "^3.7.0",
     "remix-auth-form": "^1.5.0",
-    "remix-themes": "^1.3.1",
-    "remix-utils": "^7.6.0"
+    "remix-themes": "^1.5.1",
+    "remix-utils": "^7.7.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.9.2",
+    "@remix-run/dev": "2.13.1",
     "@types/crypto-js": "^4.2.2",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^5.16.1",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.13.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.1",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prisma": "^5.21.1",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "engines": {
     "node": ">=20.0.0"
